# ProtLake

./: .gitignore  README.md  mamba_env.yml  pytest.ini  read.py  setup.cfg  utils.py  write.py
analyze/af3/: analyze.py  merge.py  worker.py
analyze/af3/scorefxns/: _template.py  len_af3.py  motif_rmsd.py
src/protlake/: __init__.py  protlake.py  query.py  read.py  utils.py
src/protlake.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/protlake/af3/: analysis_merge.py  analysis_worker.py  ingest.py
src/protlake/scripts/: analyze_af3.py  extract_cif.py  ingest_spool.py
src/protlake/write/: core.py  schema_config.py  staging.py  writer.py
tests/: test_protlake_writer.py
tests/af3/: af3_analysis.sh  af3_to_protlake.py  af3_to_protlake_slurm.py  af3_to_protlake_slurm.slurm  run_af3_protlake.sh  run_af3_regular.sh
tests/af3/01_af3_to_protlake/: run.py
tests/af3/testdata_af3_input/: af3_test_01.json  af3_test_02.json  af3_test_03.json  af3_test_04.json  af3_test_05.json
tests/af3_pack/: test.py
tests/af3_pack_slurm/: test_slurm.py  test_slurm_batch.sh
tests/structures/: 6Y7A.cif
tests/testdata/TS_trp_00_01_01_150_0_11_0_0_9_AF3_1_0_2_AF3_2_2_7/: TS_trp_00_01_01_150_0_11_0_0_9_AF3_1_0_2_AF3_2_2_7_data.json  TS_trp_00_01_01_150_0_11_0_0_9_AF3_1_0_2_AF3_2_2_7_summary_confidences.json
tests/testdata/TS_trp_00_01_01_175_0_5_4_0_3_AF3_1_0_0_AF3_0_8_5/: TS_trp_00_01_01_175_0_5_4_0_3_AF3_1_0_0_AF3_0_8_5_data.json
(+1740 files in other folders)
