[metadata]
name = protlake
version = 0.0.1
description = An efficient storage format for large datasets of protein structures and associated metadata
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
# include_package_data = True
install_requires =
    biotite==1.4.0
    deltalake==1.1.4
    msgpack-python==0.5.6
    numpy==2.3.3
    pandas==2.3.2
    pyarrow==21.0.0
    xxhash==3.5.0
    zstandard==0.23.0


[options.packages.find]
where = src

# [options.package_data]
# # include non-Python files inside packages, adjust patterns as needed
# * = *.yaml, *.yml, *.json, *.csv, *.txt

[options.entry_points]
console_scripts =
    protlake-analyze_af3 = protlake.scripts.analyze_af3:main
    protlake-extract_cif = protlake.scripts.extract_cif:main
